# NightCatWatermark

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml
app/: __init__.py
app/core/: __init__.py  blind.py  visible.py
app/ui/: __init__.py  main_window.py  styles.qss  tab_embed.py  tab_extract.py  widgets.py
app/ui/assets/: .gitkeep
app/workers/: __init__.py  embed_worker.py  extract_worker.py  preview_worker.py
tests/: test_core.py  test_workers.py
